--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div> -->
             <ul id="nav-links">
                 <li><a href="#home" class="nav-link"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="shop.html" class="nav-link"><i class="fa-solid fa-shirt"></i></a></li>
+                <li><a href="shop.HTML" class="nav-link"><i class="fa-solid fa-shirt"></i></a></li>
                 <li><a href="cart.html" class="nav-link"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 <li><a href="orders.html" class="nav-link"><i class="fa-solid fa-gift"></i></a></li>
                 <!-- Auth link will be updated dynamically -->
