--- a/shop.HTML
+++ b/shop.HTML
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop - H-Fashion</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="shop.css">
+    <link rel="stylesheet" href="shop.CSS">
     <script src="https://kit.fontawesome.com/23330d1986.js" crossorigin="anonymous"></script>
 </head>
 <body>
